Fix image alignment and add object-position style

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ a:hover {
 }
 
 .card img {
-  align: "center"
+  object-position: center;
   width: auto;
   height: 35%;
   object-fit: cover;
